Added touch prepare.done
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@23895 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/toolchain/crosstool.linux/Makefile
+++ b/toolchain/crosstool.linux/Makefile
@@ -36,6 +36,7 @@ default: build.done
 prepare.done:
 	sudo apt -y install autoconf bison build-essential curl flex gcc-14 g++-14 m4 zlib1g-dev
 	$(MAKE) -C ../crosstool-ng
+	touch $@
 
 ################################################################################
 
