--- a/toolchain/crosstool.linux/Makefile.ctng
+++ b/toolchain/crosstool.linux/Makefile.ctng
@@ -1,6 +1,6 @@
-# Makefile for building crosstool-ng package for Debian
+# Makefile for building ct-ng
 
-# Copyright (C)2017-2025, Philip Munts dba Munts Technologies.
+# Copyright (C)2025, Philip Munts dba Munts Technologies.
 #
 # Redistribution and use in source and binary forms, with or without
 # modification, are permitted provided that the following conditions are met:
@@ -46,14 +46,13 @@ endif
 
 # Build crosstool-ng
 
-ctng.done:
+default:
 	rm -rf $(CTNG_SRC)
 	git clone --depth 1 $(CTNG_BRANCH) $(CTNG_URL) $(CTNG_SRC)
 	cd $(CTNG_SRC) && PATH=$(BUILDPATH) ./bootstrap
 	cd $(CTNG_SRC) && PATH=$(BUILDPATH) ./configure --prefix=$(shell pwd)/$(CTNG_SRC) --disable-nls
 	cd $(CTNG_SRC) && PATH=$(BUILDPATH) $(MAKE)
 	cd $(CTNG_SRC) && PATH=$(BUILDPATH) $(MAKE) install
-	touch $@
 
 # Remove working files
 
