Construct OSNAME for macOS
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@23914 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/toolchain/crosstool/Makefile.dpkg
+++ b/toolchain/crosstool/Makefile.dpkg
@@ -29,7 +29,11 @@ GCC_VERN	:= $(shell $(INSTALLDIR)/bin/$(CONFIGURE_NAME)-gcc --version | awk '/gc
 GCC_VERS	:= $(shell $(INSTALLDIR)/bin/$(CONFIGURE_NAME)-gcc --version | awk '/gcc/ { print $$0 }')
 
 BUILDNUM	?= 1
+ifeq ($(shell uname), Darwin)
+OSNAME		:= macos-$(shell uname -a | awk '{ print $$3 }')
+else
 OSNAME		?= unknown
+endif
 PKGNAME		:= gcc-$(TOOLCHAIN_NAME)
 PKGVER		:= $(GCC_VERN)-$(shell date +%Y.%j).$(BUILDNUM)
 PKGARCH		:= $(shell dpkg --print-architecture)
