Added OSNAME to package file name
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@23916 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/toolchain/freepascal/Makefile
+++ b/toolchain/freepascal/Makefile
@@ -58,10 +58,11 @@ BUILDOPTS	+= OPT=-dFPC_RISCV64 CROSSOPT="$(CPUOPTS)"
 endif
 
 BUILDNUM	?= 1
+OSNAME		?= unknown
 PKGNAME		:= fpc-$(TOOLCHAIN_NAME)
 PKGVER		:= $(FPC_VERSION)-$(shell date +%Y.%j).$(BUILDNUM)
 PKGARCH		:= $(shell dpkg --print-architecture)
-PKGSUFFIX	:= $(PKGVER)-$(PKGARCH)
+PKGSUFFIX	:= $(PKGVER)-$(OSNAME)-$(PKGARCH)
 PKGDIR		:= $(PKGNAME)-$(PKGSUFFIX)
 PKGFILE		:= $(PKGNAME)-$(PKGSUFFIX).deb
 
