Remove source.done in distclean target
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@23923 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/toolchain/crosstool/Makefile
+++ b/toolchain/crosstool/Makefile
@@ -152,8 +152,8 @@ clean:
 
 reallyclean: clean
 	-chmod -R u+w gcc*
-	rm -rf .config* build* config* gcc* include
+	rm -rf .config* build* config* gcc*
 
 distclean: reallyclean
 	$(MAKE) -f Makefile.ctng clean
-	rm -rf distfiles prepare.done
+	rm -rf distfiles prepare.done source.done
