uname -o is Msys
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@23924 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/toolchain/crosstool/Makefile
+++ b/toolchain/crosstool/Makefile
@@ -58,7 +58,7 @@ BUILDPATH	:= $(BUILDPATH):/usr/bin
 endif
 endif
 
-ifeq ($(shell uname -o), Msys2)
+ifeq ($(shell uname -o), Msys)
 # Build with Alire GNAT Native, and exclude Windows system directories
 BUILDPATH	:= $(HOME)/AppData/Local/alire/cache/toolchains/gnat_native_15.2.1_346e2e00
 BUILDPATH	:= $(BUILDPATH):/usr/bin
