Cosmetic changes to description and copyright
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@23928 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/toolchain/crosstool/Makefile.dpkg
+++ b/toolchain/crosstool/Makefile.dpkg
@@ -1,6 +1,6 @@
-# Makefile for building a crosstool-NG cross-toolchain
+# Makefile for building a crosstool-NG cross-toolchain Debian package file
 
-# Copyright (C)2017-2025, Philip Munts dba Munts Technologies.
+# Copyright (C)2025, Philip Munts dba Munts Technologies.
 #
 # Redistribution and use in source and binary forms, with or without
 # modification, are permitted provided that the following conditions are met:
